# ROS2Ti5DualArmManipulation

./: .gitmodules  README.md  ROS2双臂接口文档.md
Ti5_Arms/: CMakeLists.txt
Ti5_Arms/include/Ti5_Arms/: Ti5_Arms.h
Ti5_Arms/src/: Ti5_Arms.cpp
Ti5_py/: package.xml  setup.cfg  setup.py
Ti5_py/Ti5_py/: 1  Ti5_py.py
Ti5robot/: CMakeLists.txt  package.xml
Ti5robot/include/: Ti5robot.h
Ti5robot/include/Ti5robot/: Ti5robot.h
Ti5robot/src/: Ti5robot.cpp
arm1/: .setup_assistant  package.xml
arm1/config/: ti5_urdf.srdf  ti5_urdf.urdf.xacro
arm1/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm2/: .setup_assistant  package.xml
arm2/config/: initial_positions.yaml  ti5_urdf.ros2_control.xacro  ti5_urdf.srdf  ti5_urdf.urdf.xacro
arm2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm3/: .setup_assistant  package.xml
arm3/config/: ti5_urdf.urdf.xacro
arm3/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arms/: .setup_assistant  CMakeLists.txt  package.xml
arms/config/: arms_urdf.ros2_control.xacro  arms_urdf.srdf  arms_urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
arms/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arms_demo/: CMakeLists.txt  package.xml
arms_demo/src/: arms_demo.cpp
arms_urdf/: CMakeLists.txt  package.xml
arms_urdf/meshes/: L_ELBOW_R_S.STL  L_SHOULDER_P_S.STL  L_SHOULDER_R_S.STL  L_SHOULDER_Y_S.STL  L_WRIST_Y_S.STL  NECK_P_S.STL  NECK_R_S.STL  R_ELBOW_R_S.STL  R_SHOULDER_P_S.STL  R_SHOULDER_R_S.STL  R_SHOULDER_Y_S.STL  R_WRIST_Y_S.STL
arms_urdf/urdf/: T170A_ARM.csv  T170A_ARM.urdf
cpp_demo/: CMakeLists.txt  package.xml
cpp_demo/src/: cpp_demo.cpp
ti5_urdf/: package.xml
ti5_urdf/urdf/: arm1.urdf  arm1handle.urdf  arm2.urdf  arm3.urdf  arm3handle.urdf
