cmake_minimum_required(VERSION 3.8)
project(Ti5robot)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)  

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

include_directories(
    include/Ti5robot
    ${catkin_INCLUDE_DIRS}
    ${moveit_ros_planning_interface_INCLUDE_DIRS}
    )

add_library(Ti5robot SHARED src/Ti5robot.cpp)

ament_target_dependencies(Ti5robot rclcpp std_msgs moveit_ros_planning_interface tf2_geometry_msgs)

target_link_libraries(Ti5robot
	  ${catkin_LIBRARIES}
	  controlcan
	)

# 安装可执行文件
install(TARGETS 
      Ti5robot 
      DESTINATION lib/${PROJECT_NAME})

#ament_package()